style-1600px.css
/* ... */
.reviews__flower{
    background-image: url(./assets/images/flower4.png);
    width: 368px;
    height: 275px;
    right: -150px;
    bottom: -30px;
    transform: rotate(-10deg);
    position: absolute;
    background-size: cover;
}
/*--------------------------------------------------------------------------------------------------------------------*/
.footer{
    background-color: black;
    padding-top: 40px;
}
.footer__link-home{
    width: 82px;
    height: 52px;
    border-radius: 2px;
    border: 1px solid #FFF;
    position: relative;
    a{
        text-decoration: none;
        color:white;
    }
}
.footer__link-home-text{
    width: 72.493px;
    margin: 3.55px 4.75px;
    height: 44.909px;
    text-align: center;
    font-size: 19.014px;
    line-height: 120%; /* 22.817px */
}
.bamboo{
    position: absolute;
    top: 24px;
    left: 10px;
}

.footer__top{
    display: flex;
    justify-content: space-between;
    margin-bottom: 36px;
}
.footer__subscribe-text{
    color: rgb(255, 255, 255);
    font-size: 24px;
    line-height: 120%;
    letter-spacing: 0;
}
.footer__input-field{
    width: 228px;
    height: 42px;
    border-radius: 2px;
    border: solid 2px rgb(254, 143, 24);
    background-color: transparent;
    color: rgb(189, 189, 189);
    font-size: 16px;
    line-height: 140%;
    letter-spacing: 0;
    padding-left: 10px;
}
.footer__input-button{
    border: 1px solid rgb(51, 59, 65);
    border-radius: 5px;
    background: rgb(241, 243, 242);
    font-size: 16px;
    font-weight: 400;
    line-height: 140%;
    letter-spacing: 0;
    text-align: center;
    width: 129px;
    height: 42px;
}
.footer__donate{
    border-radius: 5px;
    border: none;
    color: white;
    font-size: 16px;
    font-weight: 500;
    line-height: 140%;
    letter-spacing: 0;
    text-align: center;
    text-transform: uppercase;
    width: 298px;
    height: 54px;
    background: linear-gradient(121.04deg, rgb(249, 128, 75) -4.058%,rgb(254, 144, 19) 108.987%);
    margin-bottom: 44px;
}
.footer__media-link{
    img{
        background: rgb(106, 106, 108);
        border-radius: 50%;
        width: 26px;
        height: 26px;
        object-fit: scale-down;
        object-position: center;
        margin-right: 12px;
        margin-bottom: 10px;
    }
    a{
        display: flex;
        text-decoration: none;
        color: white;
        align-items: center;
    }
}
.footer__bottom{
    display: flex;
    align-items: end;
}
.footer__media{
    margin-right: 287px;
}
.footer__navigation{
    margin-right: 170px;
    display: flex;
    a{
        color: white;
    }
    a:first-child{
        color: rgb(253, 141, 30);
    }
    gap: 48px;
}
.footer__credits{
    color: rgb(255, 255, 255);
    font-size: 16px;
    font-weight: 250;
    line-height: 130%;
    letter-spacing: 0;
    text-align: left;
}

